First text + css optimalization

--- a/index.html
+++ b/index.html
@@ -54,17 +54,15 @@
       <div class="row justify-content-center align-items-center">
         <div class="col-xl-11 d-flex align-items-center justify-content-between">
           <h1 class="logo"><a href="index.html">Orange</a></h1>
-          <!-- Uncomment below if you prefer to use an image logo -->
-          <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
           <nav id="navbar" class="navbar">
             <ul>
-              <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-              <li><a class="nav-link scrollto" href="#about">About</a></li>
-              <li><a class="nav-link scrollto" href="#services">Services</a></li>
-              <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-              <li><a class="nav-link scrollto" href="#team">Team</a></li>
-              <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+              <li><a class="nav-link scrollto" href="#hero">Home</a></li>
+              <li><a class="nav-link scrollto" href="#about">O nas</a></li>
+              <li><a class="nav-link scrollto" href="#services">Usługi</a></li>
+              <li><a class="nav-link scrollto " href="#portfolio">Nasz asortyment</a></li>
+              <li><a class="nav-link scrollto" href="#team">Zespół</a></li>
+              <li><a class="nav-link scrollto" href="#contact">Kontakt</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
           </nav><!-- .navbar -->
@@ -86,10 +84,9 @@
           <div class="carousel-item active" style="background-image: url(assets/img/hero-carousel/1.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">We are professional</h2>
-                <p class="animate__animated animate__fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                <h2 class="animate__animated animate__fadeInDown">Jesteśmy profesjonalistami</h2>
+                <p class="animate__animated animate__fadeInUp">Nasze działania zawsze nastawione są na zaspokojenie potrzeb klienta</p>
+                <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Start</a>
               </div>
             </div>
           </div>
@@ -97,10 +94,9 @@
           <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/2.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">At vero eos et accusamus</h2>
-                <p class="animate__animated animate__fadeInUp">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.
-                  Temporibus autem quibusdam et aut officiis debitis aut.</p>
-                <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                <h2 class="animate__animated animate__fadeInDown">Działamy na rynku od 10 lat</h2>
+                <p class="animate__animated animate__fadeInUp">W tym czasie obsłużyliśmy 389 firm na terenie całej Polski</p>
+                <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Start</a>
               </div>
             </div>
           </div>
@@ -108,10 +104,9 @@
           <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/3.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Temporibus autem quibusdam</h2>
-                <p class="animate__animated animate__fadeInUp">Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi
-                  nesciunt omnis iste natus error sit voluptatem accusantium.</p>
-                <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                <h2 class="animate__animated animate__fadeInDown">Oferujemy kompleksową obsługę mediów dla Twojej Firmy</h2>
+                <p class="animate__animated animate__fadeInUp">Abonament, internet, telewizja, energia, roaming, pakiety.</p>
+                <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Start</a>
               </div>
             </div>
           </div>
@@ -119,10 +114,9 @@
           <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/4.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Nam libero tempore</h2>
-                <p class="animate__animated animate__fadeInUp">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
-                  voluptatem. Ut enim ad minima veniam, quis nostrum.</p>
-                <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                <h2 class="animate__animated animate__fadeInDown">Najwyższa jakość usług. Najlepszy zasięg w Polsce</h2>
+                <p class="animate__animated animate__fadeInUp">Sieć Orange oparta jest na nadajnikach najwyższej klasy.</p>
+                <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Start</a>
               </div>
             </div>
           </div>
@@ -130,10 +124,9 @@
           <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/5.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Magnam aliquam quaerat</h2>
-                <p class="animate__animated animate__fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                <h2 class="animate__animated animate__fadeInDown">Konkurencyjne ceny</h2>
+                <p class="animate__animated animate__fadeInUp">Pakiety w bardzo atrakcyjnych cenach</p>
+                <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Start</a>
               </div>
             </div>
           </div>
@@ -159,22 +152,28 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-4 box">
-            <i class="bi bi-briefcase"></i>
-            <h4 class="title"><a href="">Lorem Ipsum Delino</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+          <div class="col-lg-3 box box-bg">
+            <i class="bi bi-telephone"></i>
+            <h4 class="title">Abonament</h4>
+            <p class="description">Telefonia komórkowa, nowe numery, przeniesienia, aktywacje, przedłużenia, aneksy.</p>
           </div>
 
-          <div class="col-lg-4 box box-bg">
-            <i class="bi bi-card-checklist"></i>
-            <h4 class="title"><a href="">Dolor Sitema</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+          <div class="col-lg-3 box box-bg">
+            <i class="bi bi-laptop"></i>
+            <h4 class="title">Internet</h4>
+            <p class="description">Internet stacjonarny, mobilny, świadtłowód.</p>
           </div>
 
-          <div class="col-lg-4 box">
-            <i class="bi bi-binoculars"></i>
-            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+          <div class="col-lg-3 box box-bg">
+            <i class="bi bi-lightning"></i>
+            <h4 class="title">Energia</h4>
+            <p class="description">Energia do domu lub firmy.</p>
+          </div>
+
+          <div class="col-lg-3 box box-bg">
+            <i class="bi bi-boombox"></i>
+            <h4 class="title">Urządzenia</h4>
+            <p class="description">Telefony, modemy, routery etc.</p>
           </div>
 
         </div>
@@ -825,21 +824,8 @@
       </div>
     </div>
 
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong>BizPage</strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!--
-        All the links in the footer should remain intact.
-        You can delete the links only if you purchased the pro version.
-        Licensing information: https://bootstrapmade.com/license/
-        Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=BizPage
-      -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
-  </footer><!-- End Footer -->
+
+  </footer>
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
   <!-- Uncomment below i you want to use a preloader -->
