--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h3>About Us</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <h3>O nas</h3>
+          <p>Zajmujemy sie kompleksową obsługą firm. Dostarczamy media operatora Orange na terenie całej Polski.</p>
         </header>
 
         <div class="row about-cols">
@@ -197,7 +197,7 @@
                 <img src="assets/img/about-mission.jpg" alt="" class="img-fluid">
                 <div class="icon"><i class="bi bi-bar-chart"></i></div>
               </div>
-              <h2 class="title"><a href="#">Our Mission</a></h2>
+              <h2 class="title"><a href="#">Nasza misja</a></h2>
               <p>
                 Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
               </p>
@@ -210,7 +210,7 @@
                 <img src="assets/img/about-plan.jpg" alt="" class="img-fluid">
                 <div class="icon"><i class="bi bi-brightness-high"></i></div>
               </div>
-              <h2 class="title"><a href="#">Our Plan</a></h2>
+              <h2 class="title"><a href="#">Nasz Plan</a></h2>
               <p>
                 Sed ut perspiciatis unde omnis iste natus error sit voluptatem doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
               </p>
@@ -223,7 +223,7 @@
                 <img src="assets/img/about-vision.jpg" alt="" class="img-fluid">
                 <div class="icon"><i class="bi bi-calendar4-week"></i></div>
               </div>
-              <h2 class="title"><a href="#">Our Vision</a></h2>
+              <h2 class="title"><a href="#">Nasza Wizja</a></h2>
               <p>
                 Nemo enim ipsam voluptatem quia voluptas sit aut odit aut fugit, sed quia magni dolores eos qui ratione voluptatem sequi nesciunt Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.
               </p>
@@ -240,8 +240,8 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header wow fadeInUp">
-          <h3>Services</h3>
-          <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus, ad pro quaestio laboramus. Ei ubique vivendum pro. At ius nisl accusam lorenta zanos paradigno tridexa panatarel.</p>
+          <h3>Usługi</h3>
+          <p>Oferujemy bardzo szeroki zakres usług. Od abonamentów komórkowych, poprzez internet, na energii kończąc.</p>
         </header>
 
         <div class="row">
@@ -285,9 +285,9 @@
     <!-- ======= Call To Action Section ======= -->
     <section id="call-to-action">
       <div class="container text-center" data-aos="zoom-in">
-        <h3>Call To Action</h3>
-        <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <a class="cta-btn" href="#">Call To Action</a>
+        <h3>Zadzwoń do nas!</h3>
+        <p>Z przyjemnością odpowiemy na wszystkie Twoje pytania i przygotujemy ofertę specjalnie pod Twoje oczekiwania. Oferta jest zupełnie bezpłatna.</p>
+        <a class="cta-btn" href="#">Zadzwoń</a>
       </div>
     </section><!-- End Call To Action Section -->
 
@@ -296,8 +296,8 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h3>Our Skills</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+          <h3>Nasze skillsy</h3>
+          <p>To som nasze skillsy i raczej som do usunienica</p>
         </header>
 
         <div class="skills-content">
@@ -336,8 +336,8 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h3>Facts</h3>
-          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <h3>Nasze Realizacje</h3>
+          <p>Kilka faktów na nasz temat</p>
         </header>
 
         <div class="row counters">
@@ -376,7 +376,8 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h3 class="section-title">Our Portfolio</h3>
+          <h3 class="section-title">Nasze Urządzenia</h3>
+          <p>Urządzenia dostępne od ręki</p>
         </header>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100"">
