--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
           <div class="carousel-item active" style="background-image: url(assets/img/hero-carousel/1.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Jesteśmy profesjonalistami</h2>
-                <p class="animate__animated animate__fadeInUp">Nasze działania zawsze nastawione są na zaspokojenie potrzeb klienta</p>
+                <h2 class="animate__animated animate__fadeInDown">Kompleksowa obsługa mediów dla Twojej Firmy</h2>
+                <p class="animate__animated animate__fadeInUp">Abonament, internet, telewizja, energia, roaming, pakiety.</p>
                 <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Start</a>
               </div>
             </div>
@@ -104,8 +104,8 @@
           <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/3.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Oferujemy kompleksową obsługę mediów dla Twojej Firmy</h2>
-                <p class="animate__animated animate__fadeInUp">Abonament, internet, telewizja, energia, roaming, pakiety.</p>
+                <h2 class="animate__animated animate__fadeInDown">Jesteśmy profesjonalistami</h2>
+                <p class="animate__animated animate__fadeInUp">Nasze działania zawsze nastawione są na zaspokojenie potrzeb Klienta</p>
                 <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Start</a>
               </div>
             </div>
@@ -114,7 +114,7 @@
           <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/4.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Najwyższa jakość usług. Najlepszy zasięg w Polsce</h2>
+                <h2 class="animate__animated animate__fadeInDown">Najwyższa jakość usług, najlepszy zasięg</h2>
                 <p class="animate__animated animate__fadeInUp">Sieć Orange oparta jest na nadajnikach najwyższej klasy.</p>
                 <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Start</a>
               </div>
@@ -287,7 +287,7 @@
       <div class="container text-center" data-aos="zoom-in">
         <h3>Zadzwoń do nas!</h3>
         <p>Z przyjemnością odpowiemy na wszystkie Twoje pytania i przygotujemy ofertę specjalnie pod Twoje oczekiwania. Oferta jest zupełnie bezpłatna.</p>
-        <a class="cta-btn" href="#">Zadzwoń</a>
+        <a class="cta-btn" href="#">+48 601 870 505</a>
       </div>
     </section><!-- End Call To Action Section -->
 
@@ -646,7 +646,6 @@
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h3>Team</h3>
-          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
         </div>
 
         <div class="row">
@@ -656,8 +655,8 @@
               <img src="assets/img/team-1.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Walter White</h4>
-                  <span>Chief Executive Officer</span>
+                  <h4>Karol Klaweli</h4>
+                  <span>Główny Sprzedawca</span>
                   <div class="social">
                     <a href=""><i class="bi bi-twitter"></i></a>
                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -671,17 +670,11 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/team-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/kacper.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Sarah Jhonson</h4>
-                  <span>Product Manager</span>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
+                  <h4>Kacper</h4>
+                  <span>Manager</span>
                 </div>
               </div>
             </div>
@@ -689,17 +682,11 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
-              <img src="assets/img/team-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/wojtek.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>William Anderson</h4>
-                  <span>CTO</span>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
+                  <h4>Wojtek</h4>
+                  <span>Sekretarz</span>
                 </div>
               </div>
             </div>
@@ -707,11 +694,11 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="member" data-aos="fade-up" data-aos-delay="400">
-              <img src="assets/img/team-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/asti.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Amanda Jepson</h4>
-                  <span>Accountant</span>
+                  <h4>Asti</h4>
+                  <span>Księgowa</span>
                   <div class="social">
                     <a href=""><i class="bi bi-twitter"></i></a>
                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -733,8 +720,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h3>Contact Us</h3>
-          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <h3>kontakt</h3>
         </div>
 
         <div class="row contact-info">
@@ -742,16 +728,16 @@
           <div class="col-md-4">
             <div class="contact-address">
               <i class="bi bi-geo-alt"></i>
-              <h3>Address</h3>
-              <address>A108 Adam Street, NY 535022, USA</address>
+              <h3>Adres</h3>
+              <address>Więzowska 5A, 61-001 Poznań</address>
             </div>
           </div>
 
           <div class="col-md-4">
             <div class="contact-phone">
               <i class="bi bi-phone"></i>
-              <h3>Phone Number</h3>
-              <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
+              <h3>Telefon</h3>
+              <p>+48 601 870 505</p>
             </div>
           </div>
 
@@ -759,7 +745,7 @@
             <div class="contact-email">
               <i class="bi bi-envelope"></i>
               <h3>Email</h3>
-              <p><a href="mailto:info@example.com">info@example.com</a></p>
+              <p><a href="mailto:karolklaweli@gmail.com">karolklaweli@gmail.com</a></p>
             </div>
           </div>
 
