START modifying paralax

--- a/index.html
+++ b/index.html
@@ -284,51 +284,59 @@
       </div>
     </section><!-- End Services Section -->
 
+
+
     <!-- ======= Call To Action Section ======= -->
-    <section id="call-to-action">
-      <div class="container text-center" data-aos="zoom-in">
-        <h3>Zadzwoń do nas!</h3>
-        <p>Z przyjemnością odpowiemy na wszystkie Twoje pytania i przygotujemy ofertę specjalnie pod Twoje oczekiwania. Oferta jest zupełnie bezpłatna.</p>
-        <a class="cta-btn" href="#">+48 601 870 505</a>
-      </div>
-    </section><!-- End Call To Action Section -->
+
+    <div id="merge-paralax">
+
+      <section id="call-to-action">
+        <div class="container text-center" data-aos="zoom-in">
+          <h3>Zadzwoń do nas!</h3>
+          <p>Z przyjemnością odpowiemy na wszystkie Twoje pytania i przygotujemy ofertę specjalnie pod Twoje oczekiwania. Oferta jest zupełnie bezpłatna.</p>
+          <a class="cta-btn" href="#">+48 601 870 505</a>
+        </div>
+      </section><!-- End Call To Action Section -->
 
 
 
-    <!-- ======= Facts Section ======= -->
-    <section id="facts">
-      <div class="container" data-aos="fade-up">
+      <!-- ======= Facts Section ======= -->
+      <section id="facts">
+        <div class="container" data-aos="fade-up">
 
-        <header class="section-header">
-          <h3>Nasze Realizacje</h3>
-          <p>Kilka faktów na nasz temat</p>
-        </header>
+          <header class="section-header">
+            <h3>Nasze Realizacje</h3>
+            <p>Kilka faktów na nasz temat</p>
+          </header>
 
-        <div class="row counters">
+          <div class="row counters">
 
-          <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Clients</p>
+            <div class="col-lg-3 col-6 text-center">
+              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Clients</p>
+            </div>
+
+            <div class="col-lg-3 col-6 text-center">
+              <span data-purecounter-start="0" data-purecounter-end="421" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Projects</p>
+            </div>
+
+            <div class="col-lg-3 col-6 text-center">
+              <span data-purecounter-start="0" data-purecounter-end="1364" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Hours Of Support</p>
+            </div>
+
+            <div class="col-lg-3 col-6 text-center">
+              <span data-purecounter-start="0" data-purecounter-end="38" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Hard Workers</p>
+            </div>
           </div>
-
-          <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="421" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Projects</p>
-          </div>
-
-          <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="1364" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Hours Of Support</p>
-          </div>
-
-          <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="38" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Hard Workers</p>
-          </div>
-
         </div>
 
-    </section><!-- End Facts Section -->
+      </section><!-- End Facts Section -->
+
+    </div>
+
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="section-bg">
