Paralax Done Clean Code

--- a/index.html
+++ b/index.html
@@ -286,56 +286,48 @@
 
 
 
-    <!-- ======= Call To Action Section ======= -->
 
-    <div id="merge-paralax">
+    <!-- ======= Facts Section ======= -->
 
-      <section id="call-to-action">
+      <section id="facts">
+
         <div class="container text-center" data-aos="zoom-in">
           <h3>Zadzwoń do nas!</h3>
           <p>Z przyjemnością odpowiemy na wszystkie Twoje pytania i przygotujemy ofertę specjalnie pod Twoje oczekiwania. Oferta jest zupełnie bezpłatna.</p>
           <a class="cta-btn" href="#">+48 601 870 505</a>
         </div>
-      </section><!-- End Call To Action Section -->
+        
+        <div class="container text-center" data-aos="fade-up">
 
-
-
-      <!-- ======= Facts Section ======= -->
-      <section id="facts">
-        <div class="container" data-aos="fade-up">
-
-          <header class="section-header">
             <h3>Nasze Realizacje</h3>
-            <p>Kilka faktów na nasz temat</p>
-          </header>
 
           <div class="row counters">
 
             <div class="col-lg-3 col-6 text-center">
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Clients</p>
+              <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Lat działalności</p>
+            </div>
+
+            <div class="col-lg-3 col-6 text-center">
+              <span data-purecounter-start="0" data-purecounter-end="137" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Klientów</p>
             </div>
 
             <div class="col-lg-3 col-6 text-center">
               <span data-purecounter-start="0" data-purecounter-end="421" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Projects</p>
+              <p>Zawartych Umów</p>
             </div>
 
             <div class="col-lg-3 col-6 text-center">
-              <span data-purecounter-start="0" data-purecounter-end="1364" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Hours Of Support</p>
+              <span data-purecounter-start="0" data-purecounter-end="2364" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Godzin wsparcia</p>
             </div>
 
-            <div class="col-lg-3 col-6 text-center">
-              <span data-purecounter-start="0" data-purecounter-end="38" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Hard Workers</p>
-            </div>
           </div>
         </div>
 
       </section><!-- End Facts Section -->
 
-    </div>
 
 
     <!-- ======= Portfolio Section ======= -->
