--- a/index.html
+++ b/index.html
@@ -289,44 +289,44 @@
 
     <!-- ======= Facts Section ======= -->
 
-      <section id="facts">
+    <section id="facts">
 
-        <div class="container text-center" data-aos="zoom-in">
-          <h3>Zadzwoń do nas!</h3>
-          <p>Z przyjemnością odpowiemy na wszystkie Twoje pytania i przygotujemy ofertę specjalnie pod Twoje oczekiwania. Oferta jest zupełnie bezpłatna.</p>
-          <a class="cta-btn" href="#">+48 601 870 505</a>
-        </div>
-        
-        <div class="container text-center" data-aos="fade-up">
+      <div class="container text-center" data-aos="zoom-in">
+        <h3>Zadzwoń do nas!</h3>
+        <p>Z przyjemnością odpowiemy na wszystkie Twoje pytania i przygotujemy ofertę specjalnie pod Twoje oczekiwania. Oferta jest zupełnie bezpłatna.</p>
+        <a class="cta-btn" href="#">+48 601 870 505</a>
+      </div>
 
-            <h3>Nasze Realizacje</h3>
+      <div class="container text-center" data-aos="fade-up">
 
-          <div class="row counters">
+        <h3>Nasze Realizacje</h3>
 
-            <div class="col-lg-3 col-6 text-center">
-              <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Lat działalności</p>
-            </div>
+        <div class="row counters">
 
-            <div class="col-lg-3 col-6 text-center">
-              <span data-purecounter-start="0" data-purecounter-end="137" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Klientów</p>
-            </div>
-
-            <div class="col-lg-3 col-6 text-center">
-              <span data-purecounter-start="0" data-purecounter-end="421" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Zawartych Umów</p>
-            </div>
-
-            <div class="col-lg-3 col-6 text-center">
-              <span data-purecounter-start="0" data-purecounter-end="2364" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Godzin wsparcia</p>
-            </div>
-
+          <div class="col-lg-3 col-6 text-center">
+            <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Lat działalności</p>
           </div>
-        </div>
 
-      </section><!-- End Facts Section -->
+          <div class="col-lg-3 col-6 text-center">
+            <span data-purecounter-start="0" data-purecounter-end="137" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Klientów</p>
+          </div>
+
+          <div class="col-lg-3 col-6 text-center">
+            <span data-purecounter-start="0" data-purecounter-end="421" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Zawartych Umów</p>
+          </div>
+
+          <div class="col-lg-3 col-6 text-center">
+            <span data-purecounter-start="0" data-purecounter-end="2364" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Godzin wsparcia</p>
+          </div>
+
+        </div>
+      </div>
+
+    </section><!-- End Facts Section -->
 
 
 
@@ -340,12 +340,12 @@
         </header>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100"">
-      <div class=" col-lg-12">
+       <div class=" col-lg-12">
           <ul id="portfolio-flters">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">App</li>
-            <li data-filter=".filter-card">Card</li>
-            <li data-filter=".filter-web">Web</li>
+            <li data-filter="*" class="filter-active">Wszystko</li>
+            <li data-filter=".filter-app">Iphone</li>
+            <li data-filter=".filter-card">Android</li>
+            <li data-filter=".filter-web">Routery</li>
           </ul>
         </div>
       </div>
@@ -497,7 +497,7 @@
       <div class="container" data-aos="zoom-in">
 
         <header class="section-header">
-          <h3>Our Clients</h3>
+          <h3>Nasi Klienci</h3>
         </header>
 
         <div class="clients-slider swiper">
@@ -522,7 +522,7 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h3>Testimonials</h3>
+          <h3>Opinie</h3>
         </header>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -604,7 +604,7 @@
     <section id="team">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h3>Team</h3>
+          <h3>Zespół</h3>
         </div>
 
         <div class="row">
