Iphone phones added

--- a/index.html
+++ b/index.html
@@ -362,13 +362,34 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">App 1</a></h4>
-                <p>App</p>
+                <h4>iPhone 13 Pro Max 256GB 5G</h4>
+                <p>6255,78 zł</p>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="assets/img/portfolio/app1.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/app1.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
+                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4>iPhone 13 Pro Max 128GB 5G</h4>
+                <p>5750,25 zł</p>
+              </div>
+            </div>
+          </div>
+
+
+
+
+
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/portfolio/web3.jpg" class="img-fluid" alt="">
@@ -377,8 +398,8 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Web 3</a></h4>
-                <p>Web</p>
+                <h4>iPhone 13 mini 128GB 5G</h4>
+                <p>3630,96 zł</p>
               </div>
             </div>
           </div>
@@ -392,13 +413,13 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">App 2</a></h4>
-                <p>App</p>
+                <h4>iPhone 13 256GB 5G</h4>
+                <p>4741,65 zł</p>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/portfolio/card2.jpg" class="img-fluid" alt="">
@@ -407,13 +428,13 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Card 2</a></h4>
-                <p>Card</p>
+                <h4>iPhone 13 128GB 5G</h4>
+                <p>4236,12 zł</p>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/portfolio/web2.jpg" class="img-fluid" alt="">
@@ -422,8 +443,8 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Web 2</a></h4>
-                <p>Web</p>
+                <h4>iPhone 12 64GB 5G</h4>
+                <p>3630,96 zł</p>
               </div>
             </div>
           </div>
@@ -437,13 +458,13 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">App 3</a></h4>
-                <p>App</p>
+                <h4>iPhone 12 128GB 5G</h4>
+                <p>3883,11 zł</p>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/portfolio/card1.jpg" class="img-fluid" alt="">
@@ -452,8 +473,8 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Card 1</a></h4>
-                <p>Card</p>
+                <h4>iPhone 11 128GB 2021</h4>
+                <p>2876,97 zł</p>
               </div>
             </div>
           </div>
@@ -467,7 +488,7 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Card 3</a></h4>
+                <h4>Card 3</h4>
                 <p>Card</p>
               </div>
             </div>
@@ -482,7 +503,7 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Web 1</a></h4>
+                <h4>Web 1</h4>
                 <p>Web</p>
               </div>
             </div>
