--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">Wszystko</li>
               <li data-filter=".filter-app">Iphone</li>
-              <li data-filter=".filter-card">Android</li>
+              <li data-filter=".filter-sam">Samsung</li>
               <li data-filter=".filter-web">Routery</li>
             </ul>
           </div>
@@ -479,7 +479,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sam">
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/portfolio/card3.jpg" class="img-fluid" alt="">
@@ -488,8 +488,83 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4>Card 3</h4>
-                <p>Card</p>
+                <h4>Samsung Galaxy S21 Ultra 5G 256GB</h4>
+                <p>7105,71 zł</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sam">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="assets/img/portfolio/card3.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/card3.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 3"><i class="bi bi-plus"></i></a>
+                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4>Samsung Galaxy S21 FE 5G</h4>
+                <p>3594,06 zł</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sam">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="assets/img/portfolio/card3.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/card3.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 3"><i class="bi bi-plus"></i></a>
+                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4>Samsung Galaxy S21 5G 128GB</h4>
+                <p>3976,59 zł</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sam">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="assets/img/portfolio/card3.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/card3.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 3"><i class="bi bi-plus"></i></a>
+                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4>Samsung Galaxy A52s 5G 128GB</h4>
+                <p>1723,23 zł</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sam">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="assets/img/portfolio/card3.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/card3.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 3"><i class="bi bi-plus"></i></a>
+                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4>Samsung Galaxy A53 5G 128GB</h4>
+                <p>2054,10 zł</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sam">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="assets/img/portfolio/card3.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/card3.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 3"><i class="bi bi-plus"></i></a>
+                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4>Samsung Galaxy A32 5G 64GB</h4>
+                <p>1311,18 zł</p>
               </div>
             </div>
           </div>
