--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
               <li data-filter="*" class="filter-active">Wszystko</li>
               <li data-filter=".filter-app">Iphone</li>
               <li data-filter=".filter-sam">Samsung</li>
-              <li data-filter=".filter-web">Routery</li>
+              <li data-filter=".filter-xia">Xiaomi</li>
             </ul>
           </div>
         </div>
@@ -356,7 +356,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/app1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/iPhone 13 Pro Max 256GB 5G.jpg" class="img-fluid" alt="">
                 <a href="assets/img/portfolio/app1.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
               </figure>
@@ -367,7 +367,6 @@
               </div>
             </div>
           </div>
-
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
@@ -383,11 +382,6 @@
               </div>
             </div>
           </div>
-
-
-
-
-
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
@@ -569,7 +563,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-xia">
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/portfolio/web1.jpg" class="img-fluid" alt="">
@@ -578,8 +572,68 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4>Web 1</h4>
-                <p>Web</p>
+                <h4>Xiaomi Redmi 10 64GB</h4>
+                <p>956,94 zł</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-xia">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="assets/img/portfolio/web1.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/web1.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 1"><i class="bi bi-plus"></i></a>
+                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4>Xiaomi Redmi Note 10 4/64GB 5G DS.</h4>
+                <p>1211,55 zł</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-xia">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="assets/img/portfolio/web1.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/web1.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 1"><i class="bi bi-plus"></i></a>
+                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4>Xiaomi Redmi Note 11 4/128GB</h4>
+                <p>1362,84 zł</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-xia">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="assets/img/portfolio/web1.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/web1.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 1"><i class="bi bi-plus"></i></a>
+                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4>Xiaomi Redmi Note 11 Pro 5G 6/128GB</h4>
+                <p>1761,36 zł</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-xia">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="assets/img/portfolio/web1.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/web1.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 1"><i class="bi bi-plus"></i></a>
+                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4>XIAOMI REDMI NOTE 8 2021 4/64GB DS</h4>
+                <p>880,68 zł</p>
               </div>
             </div>
           </div>
