Misja Plan Wizja

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
               </div>
               <h2 class="title"><a href="#">Nasza misja</a></h2>
               <p>
-                Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Naszą misją jest profesjonalne doradztwo w zakresie telefonii komórkowej i mediów dla firm w całym kraju. Czujemy się odpowiedzialni za szybki transfer informacji w przedsiębiorstwach naszych klientów.
               </p>
             </div>
           </div>
@@ -212,7 +212,7 @@
               </div>
               <h2 class="title"><a href="#">Nasz Plan</a></h2>
               <p>
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+                Zależay nam na profesjonalnej obsłudze kontrahentów. Chcemy aby ich usługi mobilne były najlepiej dopasowane do ich potrzeb, tak żebye nie musieli się martwić o rzeczy małe, a mogli skupić na rzeczach ważnych.
               </p>
             </div>
           </div>
@@ -225,7 +225,7 @@
               </div>
               <h2 class="title"><a href="#">Nasza Wizja</a></h2>
               <p>
-                Nemo enim ipsam voluptatem quia voluptas sit aut odit aut fugit, sed quia magni dolores eos qui ratione voluptatem sequi nesciunt Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.
+                Chcemy aby firmy naszych Klientów mogły się ciągle rozwijać. Wierzymy, że nieustanny rozwój jest fundamentem istnienia każdej działalności. My również regularnie staramy się podnosić nasze kwalifikacje.
               </p>
             </div>
           </div>
