--- a/index.html
+++ b/index.html
@@ -250,33 +250,33 @@
 
           <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+            <h4 class="title"><a href="">Telefonia komórkowa</a></h4>
+            <p class="description">Szeroki zakres abonamentów komórkowych. Możliwość zakupu telefonu, w tym najnowszych Iphone.</p>
           </div>
           <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
-            <h4 class="title"><a href="">Dolor Sitema</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+            <h4 class="title"><a href="">Nowe numery, aktywacje, aneksy</a></h4>
+            <p class="description">Przeniesiemy Twoj numer do naszej sieci, aktywujemy nowe, przedużymy aktualną umowę.</p>
           </div>
           <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+            <h4 class="title"><a href="">Internet stacjonarny</a></h4>
+            <p class="description">Dysponujemy ultra szybkim internetem świadłowodowym. Nawet do 1000 Mbit/s.</p>
           </div>
           <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-binoculars"></i></div>
-            <h4 class="title"><a href="">Magni Dolores</a></h4>
-            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            <h4 class="title"><a href="">Internet mobilny</a></h4>
+            <p class="description">Dzięki najwyższej jakości nadajnikom Orange możesz cieszyć się najszybszym internetem mobilnym w Polsce.</p>
           </div>
           <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">Nemo Enim</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+            <h4 class="title"><a href="">Energia</a></h4>
+            <p class="description">Chciałbyś mieć niższe rachunki za prąd? Pozwól nam dostarczyć Energię dla Twojej firmy.</p>
           </div>
           <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            <h4 class="title"><a href="">Urządzenia</a></h4>
+            <p class="description">Dysponujemy najnowszymi urządzeniami, zgodnymi z dzisiejszymi standardami. Posiadamy w ofercie wiele flagowych modeli telefonów i nie tylko.</p>
           </div>
 
         </div>
