--- a/index.html
+++ b/index.html
@@ -356,13 +356,13 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/iPhone 13 Pro Max 256GB 5G.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/app1.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
+                <img src="assets/img/portfolio/Iphone 13 pro max.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/Iphone 13 pro max.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 3"><i class="bi bi-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4>iPhone 13 Pro Max 256GB 5G</h4>
+                <h4>iPhone 13 Pro Max</h4>
                 <p>6255,78 zł</p>
               </div>
             </div>
@@ -371,13 +371,13 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/app1.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/app1.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
+                <img src="assets/img/portfolio/Iphone 13.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/Iphone 13.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 3"><i class="bi bi-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4>iPhone 13 Pro Max 128GB 5G</h4>
+                <h4>iPhone 13</h4>
                 <p>5750,25 zł</p>
               </div>
             </div>
@@ -386,13 +386,13 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/web3.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/web3.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 3"><i class="bi bi-plus"></i></a>
+                <img src="assets/img/portfolio/Iphone 13 mini.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/Iphone 13 mini.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 3"><i class="bi bi-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4>iPhone 13 mini 128GB 5G</h4>
+                <h4>iPhone 13 mini</h4>
                 <p>3630,96 zł</p>
               </div>
             </div>
@@ -401,13 +401,13 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/app2.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/app2.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="App 2"><i class="bi bi-plus"></i></a>
+                <img src="assets/img/portfolio/Iphone 12 pro.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/Iphone 12 pro.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="App 2"><i class="bi bi-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4>iPhone 13 256GB 5G</h4>
+                <h4>iPhone 12 PRO</h4>
                 <p>4741,65 zł</p>
               </div>
             </div>
@@ -416,13 +416,13 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/card2.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/card2.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 2"><i class="bi bi-plus"></i></a>
+                <img src="assets/img/portfolio/Iphone 12 mini.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/Iphone 12 mini.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 2"><i class="bi bi-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4>iPhone 13 128GB 5G</h4>
+                <h4>iPhone 12 mini</h4>
                 <p>4236,12 zł</p>
               </div>
             </div>
@@ -431,13 +431,13 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/web2.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/web2.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 2"><i class="bi bi-plus"></i></a>
+                <img src="assets/img/portfolio/Iphone 12.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/Iphone 12.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 2"><i class="bi bi-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4>iPhone 12 64GB 5G</h4>
+                <h4>iPhone 12</h4>
                 <p>3630,96 zł</p>
               </div>
             </div>
@@ -446,28 +446,13 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/app3.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/app3.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="App 3"><i class="bi bi-plus"></i></a>
+                <img src="assets/img/portfolio/Iphone 11.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/Iphone 11.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 1"><i class="bi bi-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4>iPhone 12 128GB 5G</h4>
-                <p>3883,11 zł</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <figure>
-                <img src="assets/img/portfolio/card1.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/card1.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 1"><i class="bi bi-plus"></i></a>
-                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
-              </figure>
-
-              <div class="portfolio-info">
-                <h4>iPhone 11 128GB 2021</h4>
+                <h4>iPhone 11</h4>
                 <p>2876,97 zł</p>
               </div>
             </div>
@@ -482,7 +467,7 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4>Samsung Galaxy S21 Ultra 5G 256GB</h4>
+                <h4>Samsung Galaxy S21</h4>
                 <p>7105,71 zł</p>
               </div>
             </div>
@@ -497,7 +482,7 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4>Samsung Galaxy S21 FE 5G</h4>
+                <h4>Samsung Galaxy S20</h4>
                 <p>3594,06 zł</p>
               </div>
             </div>
@@ -512,22 +497,7 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4>Samsung Galaxy S21 5G 128GB</h4>
-                <p>3976,59 zł</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-sam">
-            <div class="portfolio-wrap">
-              <figure>
-                <img src="assets/img/portfolio/card3.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/card3.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 3"><i class="bi bi-plus"></i></a>
-                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
-              </figure>
-
-              <div class="portfolio-info">
-                <h4>Samsung Galaxy A52s 5G 128GB</h4>
+                <h4>Samsung Galaxy A52s</h4>
                 <p>1723,23 zł</p>
               </div>
             </div>
@@ -542,7 +512,7 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4>Samsung Galaxy A53 5G 128GB</h4>
+                <h4>Samsung Galaxy A53</h4>
                 <p>2054,10 zł</p>
               </div>
             </div>
@@ -557,7 +527,7 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4>Samsung Galaxy A32 5G 64GB</h4>
+                <h4>Samsung Galaxy A32</h4>
                 <p>1311,18 zł</p>
               </div>
             </div>
@@ -572,7 +542,7 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4>Xiaomi Redmi 10 64GB</h4>
+                <h4>Xiaomi Redmi 10</h4>
                 <p>956,94 zł</p>
               </div>
             </div>
@@ -587,7 +557,7 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4>Xiaomi Redmi Note 10 4/64GB 5G DS.</h4>
+                <h4>Xiaomi Redmi Note 10</h4>
                 <p>1211,55 zł</p>
               </div>
             </div>
@@ -602,7 +572,7 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4>Xiaomi Redmi Note 11 4/128GB</h4>
+                <h4>Xiaomi Redmi Note 11</h4>
                 <p>1362,84 zł</p>
               </div>
             </div>
@@ -617,7 +587,7 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4>Xiaomi Redmi Note 11 Pro 5G 6/128GB</h4>
+                <h4>Xiaomi Redmi Note 11 Pro</h4>
                 <p>1761,36 zł</p>
               </div>
             </div>
@@ -632,7 +602,7 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4>XIAOMI REDMI NOTE 8 2021 4/64GB DS</h4>
+                <h4>XIAOMI REDMI NOTE 8</h4>
                 <p>880,68 zł</p>
               </div>
             </div>
